# Mini_OS_Simulator

./: ANNOTATED.md  CMakeLists.txt  LICENSE  README.md  main.cpp  main_qt.cpp
build_local/: CMakeCache.txt
build_qt/: CMakeCache.txt
build_qt_mingw64/: CMakeCache.txt  Makefile  cmake_install.cmake
build_qt_mingw64/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
cmake/toolchains/: qt6-mingw64.cmake
cpu_scheduling/: cpu_utils.h  fcfs.cpp  priority.cpp  round_robin.cpp  schedulers_gui.cpp  schedulers_gui.h  sjf.cpp
disk_scheduling/: cscan.cpp  disk_algorithms.cpp  disk_algorithms.h  fcfs_disk.cpp  scan.cpp  sstf.cpp
memory_management/: best_fit.cpp  first_fit.cpp  memory_algorithms.cpp  memory_algorithms.h
memory_management/contiguous/: memory_algorithms.h  next_fit.cpp
memory_management/non_contiguous/: paging_algorithms.cpp  paging_algorithms.h  paging_console.cpp
page_replacement/: fifo.cpp  lru.cpp  optimal.cpp  page_algorithms.cpp  page_algorithms.h
scripts/: build_qt_mingw64.ps1
utils/: input_helper_console.cpp  input_helper_qt.cpp
